grafana-loki/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal # change with your value
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.doomain.ir`) # change with your value
      kind: Rule
      services:
        - name: loki-grafana
          port: 80
